--- a/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
@@ -75,7 +75,14 @@ signatureAlgorithm.desc=Specifies the signature algorithm that will be used to v
 
 tokenSignAlgorithm.NONE=Tokens are not required to be signed
 tokenSignAlgorithm.RS256=Use the RS256 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.RS384=Use the RS384 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.RS512=Use the RS512 signature algorithm to sign and verify tokens
 tokenSignAlgorithm.HS256=Use the HS256 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.HS384=Use the HS384 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.HS512=Use the HS512 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.ES256=Use the ES256 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.ES384=Use the ES384 signature algorithm to sign and verify tokens
+tokenSignAlgorithm.ES512=Use the ES512 signature algorithm to sign and verify tokens
 
 includeIdTokenInSubject=Include ID token in the client subject
 includeIdTokenInSubject.desc=Specifies whether to include ID token in the client subject.
